src/test/ui/traits/negative-impls/negative-default-impls.stderr
warning: the feature `specialization` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/negative-default-impls.rs:2:12
   |
LL | #![feature(specialization)]
   |            ^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default
   = note: see issue #31844 <https://github.com/rust-lang/rust/issues/31844> for more information

error: negative impls on primitive types must not contain where bounds
  --> $DIR/negative-default-impls.rs:9:1
   |
LL | default impl !MyTrait for u32 {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error; 1 warning emitted

